--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- our advantages section  -->
@@ -548,5 +550,92 @@
         </div>
       </div>
     </footer>
+    <!-- modal -->
+    <div class="modal-overlay is-hidden">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form action="#" class="modal-form">
+          <div class="field-block">
+            <label class="modal-label" for="user-name"> Name </label>
+            <div class="field-subblock">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-field"
+                autocomplete="off"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-block">
+            <label class="modal-label" for="phone"> Phone </label>
+            <div class="field-subblock">
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                class="modal-field"
+                autocomplete="off"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-block">
+            <label class="modal-label" for="email"> Email </label>
+            <div class="field-subblock">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="modal-field"
+                autocomplete="off"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="textarea-block">
+            <label class="modal-label" for="user-comment"> Comment </label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              rows="8"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox-block">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="visually-hidden"
+            />
+            <label class="user-privacy-label" for="user-privacy">
+              <span class="user-privacy-span">
+                <svg class="user-privacy-icon" width="10" height="8">
+                  <use href="./images/icons.svg#chk"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="user-privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
