--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="22">
                 <use href="./images/icons.svg#user"></use>
               </svg>
             </div>
@@ -585,7 +585,7 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="22">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
             </div>
@@ -600,8 +600,8 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#mail"></use>
+              <svg class="modal-icon" width="18" height="22">
+                <use href="./images/icons.svg#maill"></use>
               </svg>
             </div>
           </div>
