--- a/index.html
+++ b/index.html
@@ -548,6 +548,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <form action="#" class="footer-form">
+            <label class="footer-label">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="footer-input"
+                value=""
+              />
+            </label>
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- modal -->
