--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="22">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#user"></use>
               </svg>
             </div>
@@ -605,7 +605,7 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="22">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
             </div>
@@ -620,8 +620,8 @@
                 class="modal-field"
                 autocomplete="off"
               />
-              <svg class="modal-icon" width="18" height="22">
-                <use href="./images/icons.svg#maill"></use>
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#mail"></use>
               </svg>
             </div>
           </div>
