--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
       </div>
     </footer>
     <!-- modal -->
-    <div class="modal-overlay is-hidden">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -641,7 +641,7 @@
               name="user-privacy"
               id="user-privacy"
               value="true"
-              class="visually-hidden"
+              class="modal-checkbox-input visually-hidden"
             />
             <label class="user-privacy-label" for="user-privacy">
               <span class="user-privacy-span">
